--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -4,3 +4,10 @@ Add styles or override variables from the theme here.
 
 */
 
+$primary: #7fa7b2;
+$secondary: #bcb758;
+
+$enable-gradients: true;
+$enable-rounded: true;  
+
+
