--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -4,10 +4,57 @@ Add styles or override variables from the theme here.
 
 */
 
-$primary: #7fa7b2;
-$secondary: #bcb758;
+$primary: #5A8185;
+$secondary: #848145;
 
 $enable-gradients: true;
 $enable-rounded: true;  
 
+$td-enable-google-fonts: true;
 
+$google_font_name: "Roboto";
+$google_font_family: "Roboto:300,300i,400,400i,700,700i";
+
+$font-stack: Helvetica, sans-serif;
+
+$display-font-sizes: (
+  1: 6rem,
+  2: 4.5rem,
+  3: 4rem,
+  4: 3.5rem,
+  5: 3rem,
+  6: 2.5rem
+);
+
+$display-font-weight: 100;
+//$display-line-height: $headings-line-height;
+
+.display-1 {
+    font-size: 56px !important; 
+    letter-spacing: 0.4rem; 
+}
+
+.display-4 {
+    font-size: 24px !important;
+    letter-spacing: 0.1rem; 
+}
+
+$font-family-base: Helvetica, "Roboto", sans-serif; 
+
+$font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-bold: 300; 
+$headings-font-weight: 300;
+
+.person  {
+    @extend .rounded;
+    background-color: white;
+    padding: 1pt;
+    margin: 10pt;
+    width: 22rem;
+}
+
+.person card-body {
+    min-width: 300px;
+    color: red;
+}
