imported jacs-cm documentation

--- a/layouts/shortcodes/imglink.html
+++ b/layouts/shortcodes/imglink.html
@@ -1,9 +1,8 @@
 
-
 <a {{ with .Get "link" }}href="{{.}}"{{ end }}>
     <img 
         {{ with .Get "src" }}src="{{.}}"{{ end }}
-        class="rounded mx-auto d-block"
+        class="rounded mx-auto"
         {{ with .Get "width" }}style="max-width: {{.}};" {{ end }}
         
         {{ with .Get "alt" }}alt="{{.}}"{{ end }}/>
