added instances page

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -33,3 +33,9 @@
 .text-horta-secondary3 {
     color: $horta-secondary3;
 }
+
+.parabox p {
+    color: $horta-secondary3;
+    margin-top: 2pt;
+    margin-bottom: 4pt;
+}
