--- a/assets/scss/_variables_project_after_bs.scss
+++ b/assets/scss/_variables_project_after_bs.scss
@@ -1,5 +1,6 @@
 $horta-primary: #3e406a;
 $horta-dark: #2a2c4c;
+$horta-dark2: #1f202f;
 $horta-secondary: #bfac4f;
 $horta-secondary2: #f6e793;
 $horta-secondary3: #b3b5df;
@@ -7,6 +8,7 @@ $horta-secondary3: #b3b5df;
 $custom-colors: (
     'horta-primary': $horta-primary,
     'horta-dark': $horta-dark,
+    'horta-dark2': $horta-dark2,
     'horta-secondary': $horta-secondary,
     'horta-secondary2': $horta-secondary2,
     'horta-secondary3': $horta-secondary3
